<resources>
    <string name="app_name">LaTaxi Driver</string>
    <string name="api_key">AIzaSyB0Dbk_h6KGImwy1JtsJxMoTawfRzFlNGc</string>
    <string name="browser_api_key">AIzaSyB0Dbk_h6KGImwy1JtsJxMoTawfRzFlNGc</string>
    <string name="action_menu">Menu</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="btn_accounts">Accounts</string>
    <string name="btn_add">Add</string>
    <string name="btn_any">Any</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_close">Close</string>
    <string name="btn_comments">Comments</string>
    <string name="btn_complete_trip">Complete Trip</string>
    <string name="btn_confirm_you_have_arrived">Confirm you have arrived</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_earnings">Earnings</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_home">Home</string>
    <string name="btn_issues">Issues</string>
    <string name="btn_location">Location</string>
    <string name="btn_log_in">Login</string>
    <string name="btn_login_here">Login Here</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_name">Name</string>
    <string name="btn_navigate">Navigate</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open">Open</string>
    <string name="btn_open_settings">Open Settings</string>
    <string name="btn_ratings">Ratings</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_register">Register</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_resend">Resend Verification Code</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_retake">Retake</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_select">Select</string>
    <string name="btn_select_country">Select Country</string>
    <string name="btn_select_district">Select District</string>
    <string name="btn_select_location">Select Location</string>
    <string name="btn_select_state">Select State</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_start_trip">Start Trip</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_take_a_photo">Take A Photo</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_tap_to_confirm">Tap to Confirm</string>
    <string name="btn_time">Time</string>
    <string name="btn_trip_history">Trip History</string>
    <string name="btn_upload">Upload</string>
    <string name="hint_address_1">Address 1</string>
    <string name="hint_city">City</string>
    <string name="hint_confirm_password">Confrim Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_email">name@example.com</string>
    <string name="hint_email_address"><i>Email Address</i></string>
    <string name="hint_enter_your_city">Enter your City</string>
    <string name="hint_enter_your_name_here">Enter your name here</string>
    <string name="hint_enter_your_number">Enter Your Number</string>
    <string name="hint_enter_your_password">Enter your Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_name">Name</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_password"><i>Password</i></string>
    <string name="hint_phone_number">Phone</string>
    <string name="hint_postal_code">Postal Code</string>
    <string name="hint_region_or_state">Region/State</string>
    <string name="hint_search">Search…</string>
    <string name="hint_state">State</string>
    <string name="hint_type_something">Type Something…</string>
    <string name="hint_username">Username</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="label_about">About</string>
    <string name="label_about_this_version">About this Version</string>
    <string name="label_about_us">About Us</string>
    <string name="label_accessibility">Accessibility</string>
    <string name="label_account_status">Account Status</string>
    <string name="label_address">Address</string>
    <string name="label_agreement_proceed">To Proceed, please review and agree to the terms of the content below:</string>
    <string name="label_already_have_an_account">Already have an Account?</string>
    <string name="label_approved">Approved</string>
    <string name="label_at_the_end_of_the_trip">At the end of the Trip</string>
    <string name="label_background_check_consent_form">Background Check Consent Form</string>
    <string name="label_backup_restore_message">\'Backing up\' means making a copy of your most important files. This can then be used if the original copy is used. Preferably the second copy should be held at a different location to the original and be kept in a secure environment.</string>
    <string name="label_bank_passbook">Bank Passbook</string>
    <string name="label_base_fare">Base Fare</string>
    <string name="label_call">Call</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_cash_collected">Cash Collected</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_collect_cash">Collect Cash</string>
    <string name="label_commercial_insurance">Commercial Insurance</string>
    <string name="label_consent_agreement">I understand that the information provide by me may be used by LaTaxi, or its affiliates, authbridge research services private limited or its affiliates (being a third party agency appointed by LaTaxi), or any third party appointed by LaTaxi from time to time, to verify and validate the information I have provided as necessary background Checks. I understand that the third party agency appointed by LaTaxi may obtain Information it deems appropriate from various sources including, but not limited to, current and past employers, Criminal conviction records, educational records, professional and personal references and other verifying sources / authorities.</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_continue_to_earn_more_money">Continue to earn more money \nin your spare time</string>
    <string name="label_create_your_account_password">Create your account Password</string>
    <string name="label_current_rating">Current Rating</string>
    <string name="label_daily_earnings">Daily Earnings</string>
    <string name="label_did_you_know">Did you know that \nthousands of \nDrivers are using LaTaxi</string>
    <string name="label_distance">Distance</string>
    <string name="label_documents">Documents</string>
    <string name="label_driver">Driver</string>
    <string name="label_driver_cum_owner">Driver cum Owner</string>
    <string name="label_driver_cum_owner_option">Choose this option if you own the vehicle and plan to drive yourself too</string>
    <string name="label_driver_documents">Driver Documents</string>
    <string name="label_driver_licence_with_badge_number">Driver Licence with Badge Number</string>
    <string name="label_driver_license">Driver License</string>
    <string name="label_drop_off">- \tDrop Off</string>
    <string name="label_duration">Duration</string>
    <string name="label_earn_more">Earn More</string>
    <string name="label_email">Email</string>
    <string name="label_ensure_all_information">Ensure all information is readable and not blurry. Make sure that all corners of the documents are visible. You documents may not be accepted if it cannot be read properly or all four corners are not visible.</string>
    <string name="label_enter_the_4_digit_code">Enter the 4 - digit code sent to you \nat</string>
    <string name="label_enter_the_verification_code">Enter the verification code sent to you</string>
    <string name="label_error">Error</string>
    <string name="label_estimated_payout">Estimated Payout</string>
    <string name="label_fare">Fare</string>
    <string name="label_fitness_certificate">Fitness Certificate</string>
    <string name="label_fri">Fri</string>
    <string name="label_help">Help</string>
    <string name="label_hours_online"> Hrs Online</string>
    <string name="label_i_accept">I Accept</string>
    <string name="label_i_agree_to_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_i_agree_to_the">I Agree to the </string>
    <string name="label_i_agree_to_the_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_i_am_deaf_or_hard_of_hearing">I"'"m deaf or hard of hearing</string>
    <string name="label_if_a_rider_reports_a_problem">If a rider reports a problem, the reason will appear here.</string>
    <string name="label_keep_driving_and_see">Keep driving and see what people say!</string>
    <string name="label_la_taxi">LaTaxi</string>
    <string name="label_la_taxi_fee">LaTaxi Fee</string>
    <string name="label_legal_consent">Legal Consent</string>
    <string name="label_logout">Logout</string>
    <string name="label_make_sure_your_document_is_readable">Make sure your Document \nis readable</string>
    <string name="label_map_licences">Map Licences</string>
    <string name="label_missing">Missing</string>
    <string name="label_mon">Mon</string>
    <string name="label_NA">N/A</string>
    <string name="label_name">Name</string>
    <string name="label_no_comments_yet">No Comments Yet</string>
    <string name="label_no_data_available">No Data Available</string>
    <string name="label_no_issues_reported">No Issues Reported</string>
    <string name="label_no_locations">No Locations</string>
    <string name="label_no_notes_found">No Notes Found</string>
    <string name="label_no_objection_certificate">No Objection Certificate</string>
    <string name="label_no_schedules">No Schedules</string>
    <string name="label_no_schedules_found">No Schedules Found</string>
    <string name="label_non_driver_partner">Non - Driving Partner</string>
    <string name="label_non_driving_partner_option">Choose this option if you own a Vehicle but you don\'t drive. You have drivers under you to drive the Vehicle</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_please_let_us_know_what_licence">Please let us know what \nLicence you have, so we can help \nyou get on the road</string>
    <string name="label_please_upload_your_documents">Please Upload your personal Documents and Vehicle Documents</string>
    <string name="label_police_clearance_certificate">Police Clearance Certificate</string>
    <string name="label_tax_receipt">Tax Receipt</string>
    <string name="label_to_drive_with_lataxi">To drive with LaTaxi your Vehicle must be 2008 or newer and be a mid size or full size sedan that comfortably seats 4 – 8 Passengers.</string>
    <string name="label_vehicle_permit">Vehicle Permit</string>
    <string name="label_vehicle_registration">Vehicle Registration</string>
    <string name="label_volume">Volume</string>
    <string name="label_welcome">Welcome!</string>
</resources>